2010-03-25  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Consolidate i/o streams into `struct flow'.

	Here, "U" means "Throughout, use `FLOW (foo)'
	instead of the old singular variable names".
	* rcsbase.h (flow): New struct.
	(flow): New `struct flow' decl.
	(FLOW): New macro.
	(fcopy, resultname, finptr, frewrite, foutptr): Delete var decls.
	* ci.c: U.
	* co.c: U.
	* rcs.c: U.
	* rcsclean.c: U.
	* rcsdiff.c: U.
	* rcsedit.c: U.
	(fcopy, resultname): Delete var.
	* rcsfnms.c: U.
	* rcsgen.c: U.
	* rcslex.c: U.
	(finptr, frewrite, foutptr): Delete vars.
	* rcsrev.c: U.
	* rcssyn.c: U.
	* rcsutil.c (flow): New `struct flow'.
	* rlog.c: U.

2010-03-25  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Move "possible endings for RCS file" into `struct behavior'.

	Here, "U" means "Throughout, use `BE (pe)'".
	* rcsbase.h (suffixes): Delete var decl.
	(behavior): Add `pe' to this struct.
	* ci.c: U.
	* co.c: U.
	* rcs.c: U.
	* rcsclean.c: U.
	* rcsdiff.c: U.
	* rcsfnms.c: U.
	(suffixes): Delete var.
	* rcsmerge.c: U.
	* rlog.c: U.

2010-03-25  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Move "temporary log buffer" into `struct manifestation'.

	Here, "U" means "Throughout, use `MANI (log)'".
	* rcsbase.h (curlogbuf): Delete var decl.
	(manifestation): Add `log' to this struct.
	* rcs.c: U.
	* rcsgen.c: U.
	(curlogbuf): Delete var.

2010-03-25  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int C] Remove spurious `extern'.

	* rcsbase.h (isSLASH): Remove `extern' on func decl.

2010-03-25  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Move "keyword subtitution mode" into `struct behavior'.

	Here, "U" means "Throughout, use `BE (kws)'".
	* rcsbase.h (Expand): Delete var decl.
	(behavior): Add `kws' to this struct.
	* ci.c: U.
	* co.c: U.
	* rcs.c: U.
	* rcsclean.c: U.
	* rcsdiff.c: U.
	* rcsedit.c: U.
	* rcsfcmp.c: U.
	* rcsfnms.c: U.
	* rcsgen.c: U.
	* rcsmerge.c: U.
	* rcssyn.c: U.
	(Expand): Delete var.
	* rlog.c: U.

2010-03-25  Thien-Thi Nguyen  <ttn@gnuvola.org>
