@@ -36,7 +36,7 @@ isleap (int y)
   return (y & 3) == 0 && (y % 100 != 0 || y % 400 == 0);
 }
 
-static int const month_yday[] = {
+static const int const month_yday[] = {
   /* Days in year before start of months 0-12.  */
   0, 31, 59, 90, 120, 151, 181, 212, 243, 273, 304, 334, 365
 };
